# shdl

./: .gitignore  ArxivRepoHandler.py  CLIArgParser.py  CommonUtil.py  DOIRepoHandler.py  LocalFileHandler.py  README.md  StringTransformer.py  _BaseRepoHandler.py  buildscript_nix  buildscript_win.bat  cleanup_build.bat  main.py  pyproject.toml  requirements.txt  setup.cfg  shdl.py
.github/ISSUE_TEMPLATE/: bug_report.md
shdl/: __init__.py  __main__.py
shdl/src/: CommonUtil.py  LocalFileHandler.py  StringTransformer.py  __init__.py
shdl/src/RepoHandler/: ArxivRepoHandler.py  DOIRepoHandler.py  IEEERepoHandler.py  JSTORRepoHandler.py  SciDirRepoHandler.py  _BaseRepoHandler.py  __init__.py
shdlCore/: __init__.py  __main__.py
shdlCore/src/: CliArg.py  CommonUtil.py  LocalFileHandler.py  StringTransformer.py  __init__.py
shdlCore/src/RepoHandler/: ArxivRepoHandler.py  DOIRepoHandler.py  IEEERepoHandler.py  JSTORRepoHandler.py  PMIDRepoHandler.py  RegisteredRepo.py  SciDirRepoHandler.py  _BaseRepoHandler.py  __init__.py
src/: CLIArgParser.py  CommonUtil.py  LocalFileHandler.py  StringTransformer.py  __init__.py
src/RepoHandler/: ArxivRepoHandler.py  DOIRepoHandler.py  IEEERepoHandler.py  JSTORRepoHandler.py  RegisteredRepo.py  SciDirRepoHandler.py  _BaseRepoHandler.py  __init__.py
test/: runtest
