[metadata]
name = shdl
version = 0.7.2
url = https://github.com/ckf42/shdl
author = ckf42
author_email = 31157514+ckf42@users.noreply.github.com

[options]
python_requires = ~=3.8
packages =
    shdl.src.RepoHandler
    shdl.src
    shdl
package_dir =
    shdl.src.RepoHandler = shdl/src/RepoHandler
    shdl.src = shdl/src
    shdl = shdl
install_requires =
    certifi ~= 2021.5.30
    charset-normalizer ~= 2.0.4
    idna ~= 3.2
    PySocks ~= 1.7.1
    requests ~= 2.26.0
    urllib3 ~= 1.26.6
    
[options.packages.find]
where = shdl
include = *

[options.entry_points]
console_scripts =
    shdl = shdl:main
