[metadata]
name = shdl
version = 0.7.3
url = https://github.com/ckf42/shdl
author = ckf42
author_email = 31157514+ckf42@users.noreply.github.com

[options]
python_requires = ~=3.8
packages =
    shdlCore.src.RepoHandler
    shdlCore.src
    shdlCore
package_dir =
    shdlCore.src.RepoHandler = shdlCore/src/RepoHandler
    shdlCore.src = shdlCore/src
    shdlCore = shdlCore
install_requires =
    certifi ~= 2021.5.30
    charset-normalizer ~= 2.0.4
    idna ~= 3.2
    PySocks ~= 1.7.1
    requests ~= 2.26.0
    urllib3 ~= 1.26.6
    
[options.packages.find]
where = shdlCore
include = *

[options.entry_points]
console_scripts =
    shdl = shdlCore:main
